--- a/projecten.html
+++ b/projecten.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="section_left">
-            <img src="tmp.png" alt="foto">
+            <img src="img/tmp.png" alt="foto">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos sapiente 
                 sunt repellat ex rerum architecto voluptas excepturi eveniet, corrupti 
@@ -28,10 +28,10 @@
                 officia molestiae provident, labore temporibus ipsa dolorem quisquam 
                 reiciendis rem sequi!
             </p>
-            <img src="tmp.png" alt="foto">
+            <img src="img/tmp.png" alt="foto">
         </section>
         <section class="section_left">
-            <img src="tmp.png" alt="foto">
+            <img src="img/tmp.png" alt="foto">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos sapiente 
                 sunt repellat ex rerum architecto voluptas excepturi eveniet, corrupti 
