--- a/inlog.html
+++ b/inlog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" id="inlog">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inlog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <a href="index.html"><img src="img/back.png" alt="back"></a>
@@ -19,27 +21,31 @@
                 <label>achternaam*</label>
                 <label>Gebortendatum</label>
                 <label>terms*</label>
-                <input type="text" name="firstname" id="firstname" required autofocus>
-                <input type="text" name="lastname" id="lastname" required>
+                <input type="text" name="firstname" id="firstname" required autofocus onkeyup="myFunction()">
+                <input type="text" name="lastname" id="lastname" required onkeyup="myFunction()">
                 <input type="date" name="age" id="age">
-                <input type="checkbox" name="terms" id="terms" onclick="myFunction()">
+                <input type="checkbox" name="terms" id="terms" onclick="myFunction()" required>
             </div>
-            <p>*required</p>
-            <input id="submit" style="display:none" type="submit">
+            <input id="submit" type="submit">
         </form>
     </main>
 
     <script>
+        myFunction()
         function myFunction() {
-          var checkBox = document.getElementById("terms");
-          var submit = document.getElementById("submit");
-          if (checkBox.checked == true){
-            submit.style.display = "block";
-          } else {
-            submit.style.display = "none";
-          }
+            var checkBox = document.getElementById("terms");
+            var submit = document.getElementById("submit");
+            var firstname = document.getElementById("firstname");
+            var lastname = document.getElementById("lastname");
+            console.info(checkBox.checked)
+            if (checkBox.checked == true & firstname.value != "" & lastname.value != "") {
+                submit.style.backgroundColor = "rgb(0, 255, 0)";
+            } else {
+                submit.style.backgroundColor = "rgb(128, 128, 128)";
+            }
         }
     </script>
 
 </body>
-</html> 
+
+</html>
