--- a/index.html
+++ b/index.html
@@ -47,17 +47,7 @@
         <button onclick="cookies_accept()">accept</button>
         <button onclick="cookies_deny()">deny</button>
     </section>
-    <script>
-        let cookies = document.getElementById("cookies")
-        function cookies_deny() {
-            console.info("cookies: deny")
-            cookies.style.display = "none"
-        }
-        function cookies_accept() {
-            console.info("cookies: accept")
-            cookies.style.display = "none"
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
