--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </nav>
     </main>
     <section id="cookies">
-        <p>cookies</p>
+        <p>cookies?</p>
         <button onclick="cookies_accept()">accept</button>
         <button onclick="cookies_deny()">deny</button>
     </section>
-    <script src="script.js"></script>
+    <script src="script.js" onload="cookie_melding()"></script>
 </body>
 
 </html>
