--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <p>Portfolio Quinten Jungschlager</p>
+        <img src="img/tmp.png">
     </header>
     <main>
         <section>
