--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <p>Portfolio Quinten Jungschlager</p>
-        <img src="img/tmp.png">
+        <img src="img/tmp.png" class="darkmode">
     </header>
     <main>
         <section>
