--- a/hobby's.html
+++ b/hobby's.html
@@ -10,6 +10,8 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="terug"></a>
         <p>Hobby's</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
+
     </header>
     <main>
         <section>
@@ -41,5 +43,7 @@
             <img src="img/scouting.jpg" alt="foto">
         </section>
     </main>
+    <script src="script.js" onload="load()"></script>
+
 </body>
 </html>
