--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <p>Portfolio Quinten Jungschlager</p>
-        <img src="img/tmp.png" class="darkmode">
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
         <section>
@@ -48,7 +48,7 @@
         <button onclick="cookies_accept()">accept</button>
         <button onclick="cookies_deny()">deny</button>
     </section>
-    <script src="script.js" onload="cookie_melding()"></script>
+    <script src="script.js" onload="cookie_melding(), load()"></script>
 </body>
 
 </html>
