--- a/inlog.html
+++ b/inlog.html
@@ -12,6 +12,7 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="back"></a>
         <p>Inlog</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
 
     <main>
@@ -30,7 +31,7 @@
         </form>
     </main>
 
-    <script src="script.js" onload="myFunction()"></script>
+    <script src="script.js" onload="myFunction(), load()"></script>
 
 </body>
 
