--- a/inlog2.html
+++ b/inlog2.html
@@ -10,12 +10,13 @@
     <header>
         <a href="inlog.html"><img src="img/back.png" alt="back"></a>
         <p>Ingeloged</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>`
         <p id="naam">Bedankt voor het inloggen, </p>
         <p>Er word niks met deze info gedaan.</p>
         <a href="index.html" id="button">Terug naar begin.</a>
     </main>
-    <script src="script.js" onload="load_melding()"></script>  
+    <script src="script.js" onload="load_melding(), load()"></script>  
 </body>
 </html>
