--- a/interview.html
+++ b/interview.html
@@ -10,11 +10,14 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="terug"></a>
         <p>Interview</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
         <video width="100%" controls>
             <source src="img/WIN_20241107_15_12_49_Pro.mp4">
         </video>
     </main>
+    <script src="script.js" onload="load()"></script>
+
 </body>
 </html>
