--- a/me.html
+++ b/me.html
@@ -10,6 +10,7 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="terug"></a>
         <p>Me</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
         <img src="img/FullSizeRender.JPG" alt="">
@@ -52,5 +53,6 @@
                 <td><p>Nederlands.</p></td>
         </table>
     </footer>
+    <script src="script.js" onload="load()"></script>
 </body>
 </html>
