--- a/projecten.html
+++ b/projecten.html
@@ -10,6 +10,7 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="terug"></a>
         <p>Projecten</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
         <section class="section_left">
@@ -40,6 +41,7 @@
             </p>
         </section>
     </main>
+    <script src="script.js" onload="load()"></script>
 
 </body>
 </html>
