--- a/social.html
+++ b/social.html
@@ -10,6 +10,7 @@
     <header>
         <a href="index.html"><img src="img/back.png" alt="terug"></a>
         <p>Social</p>
+        <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
         <section>
@@ -25,5 +26,6 @@
             <a><p> 06 11 11 28 41</p></a>
         </section>
     </main>
+    <script src="script.js" onload="load()"></script>
 </body>
 </html>
