--- a/inlog2.html
+++ b/inlog2.html
@@ -13,7 +13,7 @@
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>`
-        <p id="naam">Bedankt voor het inloggen, </p>
+        <p id="naam"></p>
         <p>Er word niks met deze info gedaan.</p>
         <a href="index.html" id="button">Terug naar begin.</a>
     </main>
