--- a/inlog2.html
+++ b/inlog2.html
@@ -15,7 +15,7 @@
     <main>`
         <p id="naam"></p>
         <p>Er word niks met deze info gedaan.</p>
-        <a href="index.html" id="button">Terug naar begin.</a>
+        <a href="index.html" id="button">Terug</a>
     </main>
     <script src="script.js" onload="load_melding(), load()"></script>  
 </body>
