--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <header>
+        <img src="img/tmp.png" alt="menu" id="menu" onclick="menu()">
+        <nav id="menu_nav">
+            <a href="index.html">Home</a>
+            <a href="me.html">Me</a>
+            <a href="hobby's.html">Hobby's</a>
+            <a href="inlog.html">Inlog</a>
+            <a href="social.html">Social</a>
+            <a href="interview.html">Interview</a>
+            <a href="projecten.html">Projecten</a>
+        </nav>
         <p>Portfolio</p>
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
