--- a/inlog.html
+++ b/inlog.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="img/tmp.png" alt="menu" id="menu" onclick="menu()">
+        <img src="img/hamburger-menu.webp" alt="menu" id="menu" onclick="menu()">
         <nav id="menu_nav">
             <a href="index.html">Home</a>
             <a href="me.html">Me</a>
