--- a/inlog2.html
+++ b/inlog2.html
@@ -8,7 +8,7 @@
 </head>
 <body>  
     <header>
-        <img src="img/tmp.png" alt="menu" id="menu" onclick="menu()">
+        <img src="img/hamburger-menu.webp" alt="menu" id="menu" onclick="menu()">
         <nav id="menu_nav">
             <a href="index.html">Home</a>
             <a href="me.html">Me</a>
