--- a/hobby's.html
+++ b/hobby's.html
@@ -19,6 +19,7 @@
             <a href="projecten.html">Projecten</a>
         </nav>
         <p>Hobby's</p>
+        <p id="countdown"></p>
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
 
     </header>
