--- a/inlog2.html
+++ b/inlog2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" id="inlog2">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingeloged</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>  
+
+<body>
     <header>
         <img src="img/hamburger-menu.webp" alt="menu" id="menu" onclick="menu()">
         <nav id="menu_nav">
@@ -19,6 +21,7 @@
             <a href="projecten.html">Projecten</a>
         </nav>
         <p>Ingeloged</p>
+        <p id="countdown"></p>
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>`
@@ -26,6 +29,7 @@
         <p>Er word niks met deze info gedaan.</p>
         <a href="index.html" id="button">Terug</a>
     </main>
-    <script src="script.js" onload="load_melding(), load()"></script>  
+    <script src="script.js" onload="load_melding(), load()"></script>
 </body>
+
 </html>
