--- a/inlog.html
+++ b/inlog.html
@@ -21,6 +21,7 @@
             <a href="projecten.html">Projecten</a>
         </nav>
         <p>Inlog</p>
+        <p id="countdown"></p>
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
 
