--- a/social.html
+++ b/social.html
@@ -19,6 +19,7 @@
             <a href="projecten.html">Projecten</a>
         </nav>
         <p>Social</p>
+        <p id="countdown"></p>
         <img src="img/dark-mode.png" class="darkmode" onclick="dark_mode()">
     </header>
     <main>
